--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Grey+Qo&family=Pacifico&family=Poppins:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Concert+One&display=swap" );
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  font-family: "Pacifico", cursive;
+  font-family: "Concert One", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
